<resources>
    <string name="app_name"> Gasto de combustível </string>
    <string name="distancia">Distância da viagem em Km </string>
    <string name="total_de_quilometros">total de quilómetros</string>
    <string name="preco">preço do combustível </string>
    <string name="preco_por_litro">preço por litro</string>
    <string name="autonomia">Autonomia</string>
    <string name="kms_por_litro">Kms por Litro</string>
    <string name="gasto">Seu Gasto Será De </string>
    <string name="valor">R$ 0</string>
    <string name="calcular">Calcular</string>
    <string name="campoVazio">Não pode ter nenhum campo vazio</string>
    <string name="valor0">Informe valores que são validos</string>
    <string name="entrar">entrar</string>
</resources>