<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/plano_de_fundo"
    android:padding="10dp"
    tools:context=".TelaPrincipalActivity">


    <pl.droidsonroids.gif.GifImageView
        android:id="@+id/giftcarro"
        android:layout_width="200dp"
        android:layout_height="170dp"
        android:layout_gravity="center"
        android:src="@drawable/carro" />

    <EditText
        android:id="@+id/IdDistancia"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/distancia"
        android:textColorHint="@color/white"
        android:inputType="number"
        android:textColor="@color/white" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="40dp"
        android:text="@string/total_de_quilometros"
        android:textColor="@color/white" />

    <EditText
        android:id="@+id/IdPreco"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/preco"
        android:textColorHint="@color/white"
        android:inputType="numberDecimal"
        android:textColor="@color/white" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="40dp"
        android:text="@string/preco_por_litro"
        android:textColor="@color/white" />

    <EditText
        android:id="@+id/IdAutonomia"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/autonomia"
        android:textColorHint="@color/white"
        android:inputType="numberDecimal"
        android:textColor="@color/white" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="40dp"
        android:text="@string/kms_por_litro"
        android:textColor="@color/white" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:text="@string/gasto"
        android:textColor="@color/white"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/textResultado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:text="@string/valor"
        android:textColor="@color/white"
        android:textSize="30dp" />

    <Button
        android:id="@+id/buttonCalcular"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_gravity="center"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:textColor="@color/black"
        android:backgroundTint="@color/white"
        android:text="@string/calcular"
        android:textSize="20sp" />

</LinearLayout>